@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.10 2002/11/14 04:25:31 kim Exp $
+$NetBSD: distinfo,v 1.11 2002/12/12 04:38:30 kim Exp $
 
-SHA1 (tmda-0.64.tgz) = 796482c04f49e86d90baa1ce7cd312158250b777
-Size (tmda-0.64.tgz) = 234295 bytes
+SHA1 (tmda-0.65.tgz) = 75a29ae2b4612757d772d713630d7a4b1233334b
+Size (tmda-0.65.tgz) = 237575 bytes
